# throughline

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  STAGE2_HANDOFF.md  index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: AI_PROVIDERS.md  AUDIT.md  DISTRIBUTION.md  EPUB_AI_EVAL.md  IPC.md  OVERNIGHT_RESEARCH_NOTES.md  OVERNIGHT_RUBRIC.md  PHRASES_API.md  PRD.md  REVIEW-2026-06-09.md  REVIEW-2026-06-10.md  SELF-VERIFY.md  SHOT1_RC.md  SIGNING.md  UPDATES.md  WEEKEND_RC_LOG.md  design-brief.md  proxy-and-cap-spec.md  v1.1-gaps.md
docs/screenshots/: README.md
e2e/: a11y.spec.ts  fake-backend.js  walkthrough.spec.ts
scripts/: build-discover-catalogue.mjs  build-discover-seed.mjs  bump-version.mjs  shoot.sh
src/: App.activation.test.tsx  App.css  App.test.tsx  App.tsx  aiErrors.test.ts  aiErrors.ts  deadScreens.test.ts  discoverShelves.test.ts  discoverShelves.ts  legacyStorage.test.ts  legacyStorage.ts  locatorHint.test.ts  locatorHint.ts  marginPanel.test.ts  marginPanel.ts  paragraphStructure.test.ts  paragraphStructure.ts  releasePipeline.test.ts  rg-theme.css  sectionBriefing.test.ts  sectionBriefing.ts  sectionCompletion.test.ts  sectionCompletion.ts  tl-settings.css  tl-theme.css  tl-tutor.css  tutorConsent.test.ts  tutorConsent.ts  types.test.ts  types.ts  updateErrors.test.ts  updateErrors.ts  windowDragCapability.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: acceptance.rs  ai_acceptance.rs  inspect_epub.rs  inspect_state.rs  reclassify_all.rs  repair_sections.rs  shot1_acceptance.rs  shot1_realtext.rs  stage2_golden_loop.rs
src-tauri/icons/: icon.icns
src-tauri/resources/: discover_seed.json
src-tauri/src/: ai_client.rs  ai_providers.rs  ai_retention.rs  ai_stub.rs  backup.rs  bin_guardrail.rs  book_structure.rs  chunker.rs  circuit_breaker.rs  db.rs  epub_classify.rs  error.rs  export.rs  gutenberg_markup.rs  import.rs  import_epub.rs  keystore.rs  lib.rs  log.rs  main.rs  migrations.rs  models.rs  paths.rs  phrases.rs  plan.rs  recovery.rs  settings.rs  sittings.rs
src-tauri/src/commands/: ai.rs  books.rs  db_helpers.rs  discover.rs  mod.rs  notes.rs  plans.rs  sessions.rs  settings_cmds.rs
src-tauri/tests/: ai_client_mock.rs  company_proxy_mock.rs  phrases_relay_mock.rs  sectionizer_invariants.proptest-regressions  sectionizer_invariants.rs
src-tauri/tests/fixtures/: accented_multibyte.txt  heavy_front_matter.txt  multi_volume_restarting.txt  no_headings_prose.txt  toc_then_chapters.txt
src-tauri/tests/fixtures/corpus/: beyond_good_and_evil.txt  confessions_augustine.txt  don_quijote_es.txt  dracula.txt  frankenstein.txt  les_miserables.txt  meditations.txt  moby_dick.txt  modest_proposal.txt  pride_and_prejudice.txt  sherlock_holmes.txt  the_prince.txt  war_and_peace.txt
src/components/: AiSetupSheet.test.tsx  AiSetupSheet.tsx  AiUsageCard.test.tsx  AiUsageCard.tsx  CodexLogin.tsx  CompanyPanel.test.tsx  CompanyPanel.tsx  MarginNoteCard.tsx  MarginTutorCard.test.tsx  MarginTutorCard.tsx  ModelSelect.test.tsx  ModelSelect.tsx  PlansSheet.tsx  PlansView.tsx  RGIcon.tsx  RePlanDialog.tsx  SectionBriefingCard.test.tsx  SectionBriefingCard.tsx  TLIcon.tsx  ThroughlineMark.tsx  TodayTeaser.test.tsx  TodayTeaser.tsx  TutorFuel.test.tsx  TutorFuel.tsx  UpdateChecker.test.tsx  UpdateChecker.tsx
src/hooks/: useDialog.ts
src/screens/: AiHistory.test.tsx  AiHistory.tsx  AiPanel.tsx  BookSetupSheet.test.tsx  BookSetupSheet.tsx  BookSwitcher.test.tsx  BookSwitcher.tsx  Discover.css  Discover.test.tsx  Discover.tsx  EpubReader.tsx  NotesBrowser.test.tsx  NotesBrowser.tsx  Onboarding.tsx  Reader.tsx  Settings.test.tsx  Settings.tsx  TextReader.test.tsx  (+3 more)
(+1 files in other folders)
