[package]
name = "throughline"
version = "0.4.5"
description = "Throughline — local-first macOS reading app for serious readers"
authors = ["Nick Fernandez"]
edition = "2021"
license = "MIT"
repository = "https://github.com/nferna26/throughline"
readme = "../README.md"
keywords = ["reading", "epub", "local-first", "tauri", "macos"]
categories = ["text-processing"]
default-run = "throughline"

[lib]
name = "throughline_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
# Reader-initiated auto-update (click → download → relaunch). Only checks when the
# user asks (a Settings button), never on launch or a timer — within the
# no-background-network posture. NOT tauri-plugin-http/shell (which stay banned).
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
# Company-mode activation deep link (throughline://activate?token=…). Reader-
# initiated (they click the post-purchase link); single-instance focuses the
# running app instead of spawning a second one.
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
thiserror = "1"
epub = "2.1"
zip = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util", "sync", "time"] }
futures-util = "0.3"
url = "2"
# Secure at-rest storage for cloud-provider API keys (macOS Keychain via the
# Security framework). Keys are NEVER written to the DB, a file, the repo, or any
# export; only `key_present` booleans ever reach the frontend.
keyring = { version = "3", features = ["apple-native"] }
# Decode the Codex id_token JWT payload (for chatgpt_account_id) during device login.
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

[dev-dependencies]
# Property-based testing for the TXT sectionizer invariants (coverage, no
# overlap/gaps, char-boundary locators, no degenerate sections). Test-only —
# never compiled into the shipped app.
proptest = "1"
